Registration_form.html

--- a/Registration_form.html
+++ b/Registration_form.html
@@ -40,7 +40,7 @@
     <textarea name="description"></textarea><br><br>
 
     <!-- Favorite Language -->
-    <label for="favorite_language">Favorite Language</label>
+    <label id="favorite_language">Favorite Language</label>
     <select>
       <option value="javascript">JavaScript</option>
       <option value="html">HTML</option>
