--- a/fake_blog.html
+++ b/fake_blog.html
@@ -74,18 +74,18 @@
     <input type="email" id="email"><br><br>   
 
     <!-- Radio Buttons -->
-    <input type="radio" id="radio">
-    <label for="send_emails">Yes, please send me lots of emails</label>
-    <input type="radio" id="radio">
-    <label for="dont_send_emails">YNo, please dont send me any emails</label><br><br>
+    <input type="radio" id="yes">
+    <label for="yes">Yes, please send me lots of emails</label>
+    <input type="radio" id="no">
+    <label for="no">YNo, please dont send me any emails</label><br><br>
 
     <!-- How did you hear about us -->
-    <input type="checkbox" id="lead">
-    <label for="label">Facebook</label>
-    <input type="checkbox" id="lead">
-    <label for="label">Newspaper</label>
-    <input type="checkbox" id="lead">
-    <label for="label">Referral</label>
+    <input type="checkbox" id="facebook">
+    <label for="facebook">Facebook</label>
+    <input type="checkbox" id="newspaper">
+    <label for="newspaper">Newspaper</label>
+    <input type="checkbox" id="referral">
+    <label for="referral">Referral</label>
     <br><br>
 
     <!-- Submit Button -->
